--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -1,20 +1,26 @@
 name: Linting
-on: [ push, pull_request ]
+on:
+  push:
+    branches:
+      - main
+      - master
+  pull_request:
+
+permissions:
+  contents: read
+  # Optional: allow read access to pull requests. Use with `only-new-issues` option.
+  # pull-requests: read
+
 jobs:
-    codecov:
-        runs-on: ubuntu-latest
-        steps:
-            -   name: Checkout code
-                uses: actions/checkout@v4
-                with:
-                    fetch-depth: 2
-            -   name: Install Go
-                uses: actions/setup-go@v5
-                with:
-                    go-version: '1.25.2'
-                    cache: true
-            -   name: Linting
-                uses: golangci/golangci-lint-action@v7
-                with:
-                    version: v2.3.4
-                    args: --timeout=5m
+  golangci:
+    name: lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v5
+      - uses: actions/setup-go@v6
+        with:
+          go-version: stable
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v8
+        with:
+          version: v2.1
